--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+    <!-- example of a standard element -->
     <p>Hello world!</p>
+    <!-- example of an void element -->
+    <br>
+    
 </body>
 </html>
